--- a/app/src/assets/style/global.scss
+++ b/app/src/assets/style/global.scss
@@ -1,18 +1,21 @@
 * {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    /*-webkit-user-select: none;*/
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-appearance: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  /*-webkit-user-select: none;*/
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
 }
 
 html,
 body,
 #app,
 #root {
-    height: auto;
-    max-width: 100vw;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
+  height: auto;
+  max-width: 100vw;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  ::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+  }
 }
